<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_to_expire">About to expire</string>
    <string name="accessibility_add_more_contacts">Invite contact</string>
    <string name="accessibility_addto">Add to</string>
    <string name="accessibility_annotation_overlay_info_cards_drawer_dismiss">Hide cards</string>
    <string name="accessibility_annotation_overlay_promo_dismiss">Close</string>
    <string name="accessibility_annotation_overlay_promo_expand">Expand</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_back_button">Back</string>
    <string name="accessibility_camera_close_button">Close</string>
    <string name="accessibility_channel_banner">Channel banner</string>
    <string name="accessibility_channel_banner_camera_icon">Update channel banner</string>
    <string name="accessibility_channel_settings_edit_description">Edit description</string>
    <string name="accessibility_channel_settings_edit_family_name">Edit family name</string>
    <string name="accessibility_channel_settings_edit_given_name">Edit given name</string>
    <string name="accessibility_channel_settings_edit_name">Edit channel name</string>
    <string name="accessibility_channel_subscribe_action">Subscribe to this channel</string>
    <string name="accessibility_channel_unsubscribe_action">Unsubscribe from this channel</string>
    <string name="accessibility_clear_search">Clear search</string>
    <string name="accessibility_close_ad_button">Close Ad</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_dialog">Close dialog</string>
    <string name="accessibility_more_actions_video">More actions</string>
    <string name="accessibility_playlist_edit">Edit playlist</string>
    <string name="accessibility_playlist_share">Share playlist</string>
    <string name="inline_settings_description">When enabled, videos will play as you browse your homepage</string>
    <string name="mdx_background_scan_logger">Enable background scan logger</string>
    <string name="mdx_clear_auto_cast_cancel_count">Clear 1-Tap Cast Cancel Count</string>
    <string name="mdx_clear_auto_cast_cancel_count_summary">Clear the 1-Tap Cast cancel count values that are preventing 1-Tap Casting from occurring after a Cancel action.</string>
    <string name="mdx_clear_auto_cast_cool_down">Clear 1-Tap Cast Cooldown</string>
    <string name="mdx_clear_auto_cast_cool_down_summary">Clear the 1-Tap Cast cool down values that are preventing 1-Tap Casting from occurring after a Cancel action.</string>
    <string name="mdx_local_notifications_aggressive_scan">Enable aggressive scanning</string>
    <string name="mdx_local_notifications_device_whitelist">White listed devices (comma delimited) for local notifications</string>
    <string name="mdx_local_notifications_large_bitmap_url">Large bitmap url</string>
    <string name="mdx_local_notifications_override_config">Override bitmap urls and overlay flag</string>
    <string name="mdx_local_notifications_persist_notification">"Don't auto dismiss local notification"</string>
    <string name="mdx_local_notifications_show_bitmap_overlay">Show bitmap overlay</string>
    <string name="mdx_local_notifications_simulate_playback_error">Simulate background playback error</string>
    <string name="mdx_local_notifications_small_bitmap_url">Small bitmap url</string>
    <string name="mdx_local_transport_none_value">0</string>
    <string name="menu_inline_global_play_pause">Play as you browse</string>
    <string name="playlist_save">Save playlist</string>
    <string name="playlist_seasons_accessibility_label">Switch seasons</string>
    <string name="pref_autonav_title">Autoplay</string>
    <string name="pref_background_buffering_enabled_summary">Keep buffering paused videos if you leave the app</string>
    <string name="pref_background_buffering_enabled_title">Buffering</string>
    <string name="pref_content_localization_summary">Change content shown to you based on country</string>
    <string name="pref_content_localization_title">Content location</string>
    <string name="pref_developer_api_request_logging_summary">Logs API requests and response summaries to logcat</string>
    <string name="pref_developer_api_request_logging_title">Log API calls</string>
    <string name="pref_developer_apiary_host_summary">%1$s selected</string>
    <string name="pref_developer_apiary_host_title">Apiary backend</string>
    <string name="pref_developer_basic_request_logging_summary">Logs basic requests and response summaries to logcat</string>
    <string name="pref_developer_basic_request_logging_title">Log basic calls</string>
    <string name="pref_developer_debug_gel_logging_summary">Logs CSI/GEL summaries to logcat</string>
    <string name="pref_developer_debug_gel_logging_title">Debug CSI/GEL Logging</string>
    <string name="pref_developer_debug_interaction_logging_summary">Logs Interaction Logging request summaries to logcat</string>
    <string name="pref_developer_debug_interaction_logging_title">Debug Interaction Logging</string>
    <string name="pref_developer_detour_header">Detour Header</string>
    <string name="pref_developer_force_innertube_capabilities_summary">Show preferences for controlling forced supported and disabled innertube capabilities used for any requests</string>
    <string name="pref_developer_force_innertube_capabilities_title">Force Innertube Capabilities</string>
    <string name="pref_developer_full_api_response_logging_summary">Logs full API responses to logcat. This is very verbose</string>
    <string name="pref_developer_full_api_response_logging_title">Log full API responses</string>
    <string name="pref_developer_hsv_summary">Hierarchy Snapshot Viewer</string>
    <string name="pref_developer_hsv_title">HSV</string>
    <string name="pref_developer_innertube_apiversion_summary">API version %1$s selected</string>
    <string name="pref_developer_innertube_apiversion_title">InnerTube API version</string>
    <string name="pref_developer_innertubez_title">InnerTubez</string>
    <string name="pref_developer_leak_detector_summary">Leaks memory monitor</string>
    <string name="pref_developer_leak_detector_title">Memory Leak Detection</string>
    <string name="pref_developer_mdx_debug_command_title">MDX Debug Command</string>
    <string name="pref_developer_mdx_host_summary">%1$s selected</string>
    <string name="pref_developer_mdx_host_title">MDX backend</string>
    <string name="pref_developer_mdx_local_transport">Test local transport protocols.</string>
    <string name="pref_developer_memory_monitor_summary">Show a memory monitor in WatchWhileActivity</string>
    <string name="pref_developer_memory_monitor_title">Memory monitor</string>
    <string name="pref_developer_mobile_data_plan_api_carrier_id">Mobile Dataplan API Carrier ID</string>
    <string name="pref_developer_mobile_data_plan_api_client_ip">Mobile Dataplan API Client IP</string>
    <string name="pref_developer_mobile_data_plan_api_cpid">Mobile Dataplan API CPID</string>
    <string name="pref_developer_mobile_data_plan_api_environment_summary">%1$s selected</string>
    <string name="pref_developer_mobile_data_plan_api_environment_title">Mobile Dataplan API Backend</string>
    <string name="pref_developer_mobile_data_plan_debug_info_summary">CPID, endpoints, TTL</string>
    <string name="pref_developer_mobile_data_plan_debug_info_title">Mobile Dataplan Debug Info</string>
    <string name="pref_developer_offline_ad_summary">Show offline ads; edit ad playback counts, expiration, frequency cap</string>
    <string name="pref_developer_offline_ad_title">Offline Ads &amp; Frequency Cap</string>
    <string name="pref_developer_offline_browse_response_sync_summary">Resync the offline BrowseResponse.</string>
    <string name="pref_developer_offline_browse_response_sync_title">Sync offline BrowseResponse</string>
    <string name="pref_developer_offline_playlist_autosync_summary">Test offline playlist auto sync</string>
    <string name="pref_developer_offline_playlist_autosync_title">Playlist Autosync</string>
    <string name="pref_developer_offline_refresh_summary">Test offline refresh; view logs</string>
    <string name="pref_developer_offline_refresh_title">Offline Refresh</string>
    <string name="pref_developer_offline_time_window_summary">Test offline time window</string>
    <string name="pref_developer_offline_time_window_title">Offline Time Window</string>
    <string name="pref_developer_online_ads_summary">Show online ads preferences for controlling ads requests</string>
    <string name="pref_developer_online_ads_title">Online ads</string>
    <string name="pref_developer_ppg_host_title">PPG host name and port</string>
    <string name="pref_developer_remove_guide_summary">Removes the guide response from the OfflineInnerTubeResponseStore</string>
    <string name="pref_developer_remove_guide_title">Remove Guide</string>
    <string name="pref_developer_request_guide_summary">Issues a Guide request and stores the response in the OfflineInnerTubeResponseStore.</string>
    <string name="pref_developer_request_guide_title">Request Guide</string>
    <string name="pref_developer_sc_title">Spacecast Debugging</string>
    <string name="pref_developer_show_offline_http_queue_summary">Show all requests in the offline queue that will be sent when we return online</string>
    <string name="pref_developer_show_offline_http_queue_title">Show offline request queue</string>
    <string name="pref_developer_trigger_auto_offline_summary">Call the AutoOfflineController immediately. Does not do anything if not in experiment.</string>
    <string name="pref_developer_trigger_auto_offline_title">Trigger AutoOffline</string>
    <string name="pref_developer_vix_snapshot_key">VIX Snapshot key</string>
    <string name="pref_double_tap_skip_duration_title">Double-tap to seek</string>
    <string name="pref_double_tap_skip_entry_default">@string/pref_double_tap_skip_entry_10s</string>
    <string name="pref_limit_mobile_data_usage_summary">Only stream HD video on Wi-Fi</string>
    <string name="pref_limit_mobile_data_usage_title">Limit mobile data usage</string>
    <string name="pref_max_mobile_video_quality_summary">Current max quality: %1$s</string>
    <string name="pref_max_mobile_video_quality_title">Limit mobile data usage</string>
    <string name="pref_nerd_stats_enabled">Enable stats for nerds</string>
    <string name="pref_safety_mode_summary">Restricted Mode hides videos that may contain inappropriate content flagged by users and other signals. No filter is 100% accurate, but it should help you avoid most inappropriate content.</string>
    <string name="pref_safety_mode_title">Restricted Mode</string>
    <string name="pref_upload_policy_summary">Specify network preferences for uploads</string>
    <string name="pref_upload_policy_title">Uploads</string>
    <string name="pref_upload_quality_summary">Specify video quality for uploads</string>
    <string name="pref_upload_quality_title">Upload quality</string>
    <string name="upload_network_policy_pref_value_any">any</string>
</resources>