<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:yt="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.youtube.app.settings.IntListPreference android:enabled="true" android:entries="@array/inline_global_entries" android:title="@string/menu_inline_global_play_pause" android:key="inline_global_play_pause" android:summary="@string/inline_settings_description" android:defaultValue="2" android:entryValues="@array/inline_global_values" />
    <SwitchPreference android:title="@string/pref_limit_mobile_data_usage_title" android:key="limit_mobile_data_usage" android:summary="@string/pref_limit_mobile_data_usage_summary" />
    <ListPreference android:entries="@array/max_mobile_video_quality_entries" android:title="@string/pref_max_mobile_video_quality_title" android:key="max_mobile_video_quality" android:summary="@string/pref_max_mobile_video_quality_summary" android:entryValues="@array/max_mobile_video_quality_values" />
    <SwitchPreference android:title="@string/pref_background_buffering_enabled_title" android:key="com.google.android.libraries.youtube.player.pref.pause_and_buffer_continue_after_suspend" android:summary="@string/pref_background_buffering_enabled_summary" android:defaultValue="true" />
    <com.google.android.apps.youtube.app.ui.QuickSeekListPreference android:entries="@array/double_tap_length_entries" android:title="@string/pref_double_tap_skip_duration_title" android:key="double_tap_skip_duration" android:defaultValue="@string/pref_double_tap_skip_entry_default" android:entryValues="@array/double_tap_length_values" />
    <SwitchPreference android:title="@string/pref_autonav_title" android:key="autonav_settings_activity_key" />
    <ListPreference android:entries="@array/upload_policy_entries" android:title="@string/pref_upload_policy_title" android:key="upload_policy" android:summary="@string/pref_upload_policy_summary" android:defaultValue="@string/upload_network_policy_pref_value_any" android:entryValues="@array/upload_policy_values" />
    <ListPreference android:entries="@array/upload_quality_entries" android:title="@string/pref_upload_quality_title" android:key="com.google.android.libraries.youtube.upload.pref.upload_quality" android:summary="@string/pref_upload_quality_summary" android:entryValues="@array/upload_quality_values" />
    <ListPreference android:enabled="false" android:title="@string/pref_content_localization_title" android:key="country" android:summary="@string/pref_content_localization_summary" />
    <SwitchPreference android:title="@string/pref_safety_mode_title" android:key="innertube_safety_mode_enabled" android:summary="@string/pref_safety_mode_summary" />
    <SwitchPreference android:persistent="false" android:enabled="false" android:title="@string/pref_safety_mode_title" android:key="innertube_managed_restricted_mode" />
    <SwitchPreference android:title="@string/pref_nerd_stats_enabled" android:key="nerd_stats_enabled" android:defaultValue="false" />
</PreferenceScreen>