<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="media_network_activation_type" android:defaultValue="0" />
    <PreferenceScreen android:title="Backend settings">
        <ListPreference android:title="@string/pref_developer_apiary_host_title" android:key="ApiaryHostSelection" android:summary="@string/pref_developer_apiary_host_summary" android:defaultValue="0" />
        <ListPreference android:title="@string/pref_developer_innertube_apiversion_title" android:key="InnerTubeApiSelection" android:summary="@string/pref_developer_innertube_apiversion_summary" android:defaultValue="0" />
        <ListPreference android:title="@string/pref_developer_mdx_host_title" android:key="MdxServerSelection" android:summary="@string/pref_developer_mdx_host_summary" android:defaultValue="0" />
    </PreferenceScreen>
    <EditTextPreference android:digits="0123456789, " android:key="experiment_ids" android:defaultValue="" android:inputType="number" />
    <Preference android:key="experiments_token" />
    <Preference android:key="refresh_innertube_config" />
    <EditTextPreference android:digits="0123456789." android:key="innertube_override_version" android:defaultValue="" />
    <EditTextPreference android:key="innertube_promo_id" android:defaultValue="" android:inputType="textNoSuggestions" />
    <Preference android:key="clear_visitor_id" />
    <Preference android:key="copy_visitor_id" />
    <ListPreference android:enabled="false" android:key="internal_geo" />
    <PreferenceScreen android:title="Uploads">
        <SwitchPreference android:key="com.google.android.libraries.youtube.upload.pref.force_enable_cronet" android:defaultValue="false" />
        <SwitchPreference android:key="com.google.android.libraries.youtube.upload.pref.force_enable_cronet_async" android:defaultValue="false" />
        <SwitchPreference android:key="com.google.android.libraries.youtube.upload.pref.force_enable_cronet_quic" android:defaultValue="false" />
        <SwitchPreference android:key="com.google.android.libraries.youtube.upload.pref.force_enable_cronet_http2" android:defaultValue="false" />
        <SwitchPreference android:key="com.google.android.libraries.youtube.upload.pref.enable_streaming_upload" android:defaultValue="false" />
        <SwitchPreference android:key="enable_upload_video_editing" android:defaultValue="false" />
        <SwitchPreference android:key="enable_upload_audio_swap" android:defaultValue="false" />
        <SwitchPreference android:key="enable_upload_filters" android:defaultValue="false" />
        <ListPreference android:key="camera_recorder_type" android:defaultValue="0" />
        <ListPreference android:key="camera_audio_source" android:defaultValue="0" />
    </PreferenceScreen>
    <PreferenceScreen android:title="Suggest">
        <SwitchPreference android:key="dogfood_suggest_log_requests" android:defaultValue="false" />
        <SwitchPreference android:key="dogfood_suggest_log_responses" android:defaultValue="false" />
        <EditTextPreference android:key="dogfood_suggest_client_name_override" android:defaultValue="" android:inputType="textNoSuggestions" />
        <EditTextPreference android:key="dogfood_suggest_host_override" android:defaultValue="" android:inputType="textNoSuggestions" />
        <EditTextPreference android:key="dogfood_suggest_response_override" android:defaultValue="" android:inputType="textNoSuggestions" />
        <EditTextPreference android:key="dogfood_suggest_sugexp_override" android:defaultValue="" android:inputType="textNoSuggestions" />
        <SwitchPreference android:key="dogfood_suggest_enable_trending_override" android:defaultValue="false" />
        <EditTextPreference android:digits="\ 0123456789" android:key="dogfood_suggest_trending_signed_out_position" android:defaultValue="" />
    </PreferenceScreen>
    <SwitchPreference android:key="bypass_rate_limit" android:defaultValue="false" />
    <SwitchPreference android:key="enable_glide_image_manager" android:defaultValue="false" />
    <EditTextPreference android:persistent="false" android:title="@string/pref_developer_mdx_debug_command_title" android:key="MdxDebugCommand" android:defaultValue="" />
    <PreferenceScreen android:title="Ads">
        <Preference android:title="@string/pref_developer_online_ads_title" android:key="OnlineAd" android:summary="@string/pref_developer_online_ads_summary" />
        <Preference android:title="@string/pref_developer_offline_ad_title" android:key="OfflineAd" android:summary="@string/pref_developer_offline_ad_summary" />
    </PreferenceScreen>
</PreferenceScreen>